[gd_scene load_steps=9 format=3 uid="uid://dwuxkxcvrv88b"]

[ext_resource type="PackedScene" uid="uid://cnlake8o686ww" path="res://Scenes/gui/CleanUI/icon.tscn" id="1_6vjkc"]
[ext_resource type="Script" uid="uid://bea7aohb4k0hh" path="res://Scenes/gui/Ransomware/computer_ui.gd" id="1_fp5b4"]
[ext_resource type="Texture2D" uid="uid://d0trr7hg3ddtw" path="res://Assets/Icons - icones/notepad-02.png" id="2_fp5b4"]
[ext_resource type="Texture2D" uid="uid://dq3vnscjkrf3m" path="res://Assets/Icons - icones/trash bin-full.png" id="3_eb50o"]
[ext_resource type="Texture2D" uid="uid://cxyput4ubfiim" path="res://Assets/Icons - icones/notepad-01.png" id="4_26g6d"]
[ext_resource type="Texture2D" uid="uid://cqq656qel2mv8" path="res://Assets/Icons - icones/folder-06.png" id="5_x4axu"]
[ext_resource type="Script" uid="uid://cpwr37ebspmj0" path="res://addons/RadialMenu/RadialMenu.gd" id="6_ivukx"]
[ext_resource type="PackedScene" uid="uid://bcejk3vddejkh" path="res://Scenes/gui/CleanUI/window.tscn" id="7_7q173"]

[node name="Margin" type="MarginContainer" node_paths=PackedStringArray("windows_ui")]
anchors_preset = -1
anchor_left = -0.0815972
anchor_top = -0.141975
anchor_right = 1.06586
anchor_bottom = 1.13184
offset_right = 20.1301
offset_bottom = 12.57
scale = Vector2(0.985, 0.985)
theme_override_constants/margin_left = 95
theme_override_constants/margin_top = 95
theme_override_constants/margin_right = 95
theme_override_constants/margin_bottom = 95
script = ExtResource("1_fp5b4")
windows_ui = NodePath("Window")
metadata/_tab_index = 0
metadata/_edit_use_anchors_ = true

[node name="Desktop" type="VFlowContainer" parent="."]
custom_minimum_size = Vector2(1168.73, 654.89)
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 15
alignment = 1
metadata/_edit_lock_ = true

[node name="PDFIcon" parent="Desktop" instance=ExtResource("1_6vjkc")]
layout_mode = 2

[node name="Button" parent="Desktop/PDFIcon" index="0"]
icon = ExtResource("2_fp5b4")

[node name="Label" parent="Desktop/PDFIcon" index="1"]
text = "My file"

[node name="imageIcon" parent="Desktop" instance=ExtResource("1_6vjkc")]
layout_mode = 2

[node name="Button" parent="Desktop/imageIcon" index="0"]
icon = ExtResource("3_eb50o")

[node name="Label" parent="Desktop/imageIcon" index="1"]
text = "Image.png"

[node name="companyFile" parent="Desktop" instance=ExtResource("1_6vjkc")]
layout_mode = 2

[node name="Button" parent="Desktop/companyFile" index="0"]
icon = ExtResource("4_26g6d")

[node name="Label" parent="Desktop/companyFile" index="1"]
text = "Company file"

[node name="Malware" parent="Desktop" instance=ExtResource("1_6vjkc")]
layout_mode = 2

[node name="Button" parent="Desktop/Malware" index="0"]
icon = ExtResource("5_x4axu")

[node name="Label" parent="Desktop/Malware" index="1"]
text = "Malware"

[node name="Icon5" parent="Desktop" instance=ExtResource("1_6vjkc")]
visible = false
layout_mode = 2

[node name="Icon6" parent="Desktop" instance=ExtResource("1_6vjkc")]
visible = false
layout_mode = 2

[node name="RadialMenu" type="Control" parent="Desktop"]
visible = false
custom_minimum_size = Vector2(300, 222.263)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("6_ivukx")

[node name="Window" parent="." instance=ExtResource("7_7q173")]
layout_mode = 2

[connection signal="pressed" from="Desktop/PDFIcon/Button" to="." method="_on_pdf_button_pressed"]
[connection signal="pressed" from="Desktop/imageIcon/Button" to="." method="_on_image_button_pressed"]
[connection signal="pressed" from="Desktop/companyFile/Button" to="." method="_on_companyfile_button_pressed"]

[editable path="Desktop/PDFIcon"]
[editable path="Desktop/imageIcon"]
[editable path="Desktop/companyFile"]
[editable path="Desktop/Malware"]
[editable path="Desktop/Icon5"]
[editable path="Desktop/Icon6"]
